// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebhooksTable rendering should render when loading 1`] = `
<WebhooksTable
  canCreate={true}
  fetchAndPush={[MockFunction]}
  hasData={false}
  hasError={false}
  isLoading={true}
  itemCount={0}
  onDeleteClick={[MockFunction]}
  onEditClick={[Function]}
  page={5}
  pagination={
    Object {
      "page": 1,
      "perPage": 20,
    }
  }
  perPage={42}
  reloadWithSearch={[MockFunction]}
  results={Array []}
  search="name=foo"
  sort={
    Object {
      "by": "defaultName",
      "order": "ASC",
    }
  }
  toDelete={Object {}}
  toEdit={0}
  toasts={Array []}
/>
`;

exports[`WebhooksTable rendering should render with error 1`] = `
<WebhooksTable
  canCreate={true}
  fetchAndPush={[MockFunction]}
  hasData={false}
  hasError={true}
  isLoading={false}
  itemCount={0}
  message={
    Object {
      "text": "this is error",
      "type": "error",
    }
  }
  onDeleteClick={[MockFunction]}
  onEditClick={[Function]}
  page={5}
  pagination={
    Object {
      "page": 1,
      "perPage": 20,
    }
  }
  perPage={42}
  reloadWithSearch={[MockFunction]}
  results={Array []}
  search="name=foo"
  sort={
    Object {
      "by": "defaultName",
      "order": "ASC",
    }
  }
  toDelete={Object {}}
  toEdit={0}
  toasts={Array []}
/>
`;

exports[`WebhooksTable rendering should render with no data 1`] = `
<WebhooksTable
  canCreate={true}
  fetchAndPush={[MockFunction]}
  hasData={false}
  hasError={false}
  isLoading={false}
  itemCount={0}
  onDeleteClick={[MockFunction]}
  onEditClick={[Function]}
  page={5}
  pagination={
    Object {
      "page": 1,
      "perPage": 20,
    }
  }
  perPage={42}
  reloadWithSearch={[MockFunction]}
  results={Array []}
  search="name=foo"
  sort={
    Object {
      "by": "defaultName",
      "order": "ASC",
    }
  }
  toDelete={Object {}}
  toEdit={0}
  toasts={Array []}
/>
`;

exports[`WebhooksTable rendering should render with webhooks 1`] = `
<WebhooksTable
  canCreate={true}
  fetchAndPush={[MockFunction]}
  hasData={true}
  hasError={false}
  isLoading={false}
  itemCount={2}
  onDeleteClick={[MockFunction]}
  onEditClick={[Function]}
  page={5}
  pagination={
    Object {
      "page": 1,
      "perPage": 20,
    }
  }
  perPage={42}
  reloadWithSearch={[MockFunction]}
  results={
    Array [
      Object {
        "canDelete": true,
        "canEdit": true,
        "enabled": true,
        "id": 1,
        "name": "my-webhook",
        "targetUrl": "https://my-machine.example.com",
      },
      Object {
        "canDelete": false,
        "canEdit": false,
        "enabled": false,
        "id": 2,
        "name": "your-webhook",
        "targetUrl": "https://your-machine.example.com",
      },
    ]
  }
  search="name=foo"
  sort={
    Object {
      "by": "defaultName",
      "order": "ASC",
    }
  }
  toDelete={Object {}}
  toEdit={0}
  toasts={Array []}
/>
`;
